--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,16 +8,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
-            - uses: pnpm/action-setup@v4
+            - uses: npm/action-setup@v4
               with:
                   version: 9
             - uses: actions/setup-node@v4
               with:
                   node-version: '18'
-                  cache: 'pnpm'
-            - run: pnpm install
-            - run: pnpm prettier-check
-            - run: pnpm build
+                  cache: 'npm'
+            - run: npm npm
+            - run: npm prettier-check
+            - run: npm build
             - uses: JS-DevTools/npm-publish@v1
               with:
                   token: ${{ secrets.NPM_TOKEN }}
